Sidenav Layout Changes, Search added

--- a/header.html
+++ b/header.html
@@ -2,6 +2,13 @@
   <div class="nav-wrapper">
     <a href="/" class="brand-logo center">F A I</a>
     <a href="#" data-target="sidenav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+    <form class="hide-on-med-and-down right">
+      <div class="input-field">
+        <input id="search" type="search" required>
+        <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+        <i class="material-icons">close</i>
+      </div>
+    </form>
   </div>
 </nav>
 
@@ -48,7 +55,7 @@
             <li><a href="/download/basefiles/" title="Basefiles">Basefiles</a></li>
 	  </ul>
 	</div>
-      </li
+      </li>
     </ul>
   </li>
 
@@ -92,5 +99,4 @@
     <a class="black-text" style="padding-left:16px" href="/contact/" title="Contact">Contact / Support</a>
   </li>
 
-</ul>
 </ul>
