--- a/index.html
+++ b/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen"/>
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport"
 	  content="width=device-width,initial-scale=1.0"/>
 
+    <meta charset="UTF-8"/>
     <title>FAI - Fully Automatic Installation</title>
     <style>
       main {
 	  padding-left: 150px;
       }
       .sidenav {
-	  top: 70px;
+	  top: 65px;
       }
 
       @media only screen and (max-width : 992px) {
 	  header, main, footer {
               padding-left: 0;
+	  }
+	  .sidenav {
+	      top: 0;
 	  }
       }
     </style>
@@ -99,10 +103,9 @@
       </div>
 
     </div>
-</div>
 </main>
 <!--JavaScript at end of body for optimized loading-->
-<script type="text/javascript" src="js/materialize.js"></script>
+<script src="js/materialize.js"></script>
 <script>
   M.AutoInit();
 </script>
