Sidenav Divider added

--- a/header.html
+++ b/header.html
@@ -18,7 +18,7 @@
     <ul class="collapsible">
       <li>
 	<div class="collapsible-header">
-	  <a class="black-text" href="/">Home</a><i class="material-icons">arrow_drop_down</i>
+	  <a class="black-text">Home</a><i class="material-icons">arrow_drop_down</i>
 	</div>
 	<div class="collapsible-body">
 	  <ul>
@@ -32,14 +32,18 @@
 	</div>
       </li>
     </ul>
+    <div class="divider"></div>
   </li>
 
   <li>
     <a style="padding-left: 16px" class="" href="/FAIme/">FAI.me / Build your own</a>
+    <div class="divider"></div>
   </li>
 
   <li>
-    <a style="padding-left: 16px" href="/screenshots/">Videos / Screenshots</a>
+    <a style="padding-left: 16px" href="/screenshots/">Videos /
+      Screenshots</a>
+    <div class="divider"></div>
   </li>
 
   <li>
@@ -57,6 +61,7 @@
 	</div>
       </li>
     </ul>
+    <div class="divider"></div>
   </li>
 
   <li>
@@ -76,6 +81,7 @@
 	</div>
       </li>
     </ul>
+    <div class="divider"></div>
   </li>
 
   <li>
@@ -93,10 +99,12 @@
 	</div>
       </li>
     </ul>
+    <div class="divider"></div>
   </li>
 
   <li>
     <a class="black-text" style="padding-left:16px" href="/contact/" title="Contact">Contact / Support</a>
+    <div class="divider"></div>
   </li>
 
 </ul>
