--- a/reports/index.html
+++ b/reports/index.html
@@ -36,6 +36,61 @@ Currently we have more than 300 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> Ondrej Jombik, ceo aatt platon dot net
+<br><b>Date:</b> Wed, 25 Nov 2020 04:00:42 +0100 (CET)
+<pre>
+
+Are you using the FAI.me build service? No
+How many hosts have you installed using fai? <b>About 150</b> (physical machines and VPS as well)
+Which version of fai are you using? <b>5.8.4</b>
+Which version are you using as your install kernel? Default Debian kernel 4.19
+
+Which types of hosts are you installing with fai? Web servers, mail servers, virtualization servers
+
+How do you boot your hosts? Via network (PXE, DHCP)
+Does the default install kernel recognize all your hardware? No
+Which drivers are missing? firmware-bnx2
+
+Do you manage your configuration space under version control? Yes
+How big is your config space (Mbytes, # of files)? 11960
+How many files do you have in ../config/files? 89
+What types of scripts are you using for local customization? shell, perl, ansible
+
+<b>What is the business of your company/organisation?</b> web hosting, server administration, server housing <a href="https://www.platon.net">Platon Technologies</a>
+<br><b>Additional comments:</b>
+Thanks for the work on the project. It provides a lot more possibilities
+than Debian preseed.cfg file. Especially setup-storage is an
+unparalleled tool for setting up even the most complex partitioning
+schemes, that involve LUKS, RAID and LVM at the same time. This is not
+possible in most other tools in a clean and understandable way.
+</pre> <HR>
+
+
+<b>From:</b>  Frank Morawietz
+<br><b>Date:</b> Wed, 28 Oct 2020 12:52:21 +0000
+<pre>
+How many hosts have you installed using fai? <b>close to 20</b> (will increase over time)
+Which version of fai are you using? <b>5.9.4</b>
+Which version are you using as your install kernel? plain Debian kernel
+
+Which types of hosts are you installing with fai? desktops (powerful scientific workstations)
+
+How do you boot your hosts?   network/DHCP/PXE for installation, thereafter via UEFI local boot
+Does the default install kernel recognize all your hardware?  no
+Which drivers are missing?   Nvidia graphics drivers (I know, not open source...)
+
+Do you manage your configuration space under version control? no
+How big is your config space (Mbytes, # of files)?  828Kbytes, 127 files
+How many files do you have in ../config/files? 37
+What types of scripts are you using for local customization? bash
+
+<b>What is the business of your company/organisation?</b> pharmaceutical research
+<br><b>Additional comments:</b>
+Hosting own FAI installation server in a KVM virtual machine running
+Debian buster to install clients with openSUSE Leap.
+</pre> <HR>
+
+
 <b>From:</b> Jan Hanten
 <br><b>Date:</b> Wed, 10 Jun 2020 00:26:13 +0200 (CEST)
 <pre>
