--- a/header.html
+++ b/header.html
@@ -1,35 +1,54 @@
-<nav class="nav-extended grey darken-3">
-  <div class="nav-wrapper">
-    <a href="/" class="brand-logo center">F A I</a>
-    <a href="#" data-target="sidenav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-    <form class="hide-on-med-and-down right">
-      <div class="input-field">
-        <input id="search" type="search" required>
-        <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-        <i class="material-icons">close</i>
-      </div>
-    </form>
-  </div>
-</nav>
+<div class="navbar-fixed">
+  <nav class="grey darken-3">
+    <div class="nav-wrapper">
+      <a href="/" class="brand-logo center">F A I</a>
+      <a href="#" data-target="sidenav" class="sidenav-trigger">
+        <i class="material-icons">menu</i>
+      </a>
+      <form class="grey darken-2 hide-on-med-and-down right">
+        <div class="input-field">
+          <input id="search" type="search" required="required">
+          <label class="label-icon" for="search">
+            <i class="material-icons">search</i>
+          </label>
+          <i class="material-icons">close</i>
+        </div>
+      </form>
+    </div>
+  </nav>
+</div>
 
 <ul class="sidenav sidenav-fixed" id="sidenav">
 
   <li>
     <ul class="collapsible">
       <li>
-	<div class="collapsible-header">
-	  <a class="black-text">Home</a><i class="material-icons">arrow_drop_down</i>
-	</div>
-	<div class="collapsible-body">
-	  <ul>
-            <li><a href="/references/">References</a></li>
-            <li><a href="/features/">Features</a></li>
-            <li><a href="/poster/">Poster / Flyer</a></li>
-            <li><a href="/reports/">Case studies</a></li>
-            <li><a href="/mailinglist/">Mailing Lists / IRC / Wiki</a></li>
-            <li><a href="/cluster/">Clusters built with FAI</a></li>
-	  </ul>
-	</div>
+        <div class="collapsible-header">
+          <a class="black-text">Home</a>
+          <i class="material-icons">arrow_drop_down</i>
+        </div>
+        <div class="collapsible-body">
+          <ul>
+            <li>
+              <a href="/references/">References</a>
+            </li>
+            <li>
+              <a href="/features/">Features</a>
+            </li>
+            <li>
+              <a href="/poster/">Poster / Flyer</a>
+            </li>
+            <li>
+              <a href="/reports/">Case studies</a>
+            </li>
+            <li>
+              <a href="/mailinglist/">Mailing Lists / IRC / Wiki</a>
+            </li>
+            <li>
+              <a href="/cluster/">Clusters built with FAI</a>
+            </li>
+          </ul>
+        </div>
       </li>
     </ul>
     <div class="divider"></div>
@@ -41,24 +60,30 @@
   </li>
 
   <li>
-    <a style="padding-left: 16px" href="/screenshots/">Videos /
-      Screenshots</a>
+    <a style="padding-left: 16px" href="/screenshots/">Videos / Screenshots</a>
     <div class="divider"></div>
   </li>
 
   <li>
     <ul class="collapsible">
       <li>
-	<div class="collapsible-header">
-	  <a class="black-text">Download</a><i class="material-icons">arrow_drop_down</i>
-	</div>
-	<div class="collapsible-body">
-	  <ul>
-            <li><a href="/fai-cd/" title="FAI CD">FAI CD</a></li>
-            <li><a href="/download/">Packages</a></li>
-            <li><a href="/download/basefiles/" title="Basefiles">Basefiles</a></li>
-	  </ul>
-	</div>
+        <div class="collapsible-header">
+          <a class="black-text">Download</a>
+          <i class="material-icons">arrow_drop_down</i>
+        </div>
+        <div class="collapsible-body">
+          <ul>
+            <li>
+              <a href="/fai-cd/" title="FAI CD">FAI CD</a>
+            </li>
+            <li>
+              <a href="/download/">Packages</a>
+            </li>
+            <li>
+              <a href="/download/basefiles/" title="Basefiles">Basefiles</a>
+            </li>
+          </ul>
+        </div>
       </li>
     </ul>
     <div class="divider"></div>
@@ -67,18 +92,29 @@
   <li>
     <ul class="collapsible">
       <li>
-	<div class="collapsible-header">
-	  <a class="black-text">Documentation</a><i class="material-icons">arrow_drop_down</i>
-	</div>
-	<div class="collapsible-body">
-	  <ul>
-	    <li><a href="/guide/">Overview</a></li>
-            <li><a href="/fai-guide/">FAI Guide</a></li>
-            <li><a href="/doc/man/" title="man pages">Manual pages</a></li>
-            <li><a href="/otherdocs/">Other documentation</a></li>
-            <li><a href="/talks/">Talk slides and videos</a></li>
-	  </ul>
-	</div>
+        <div class="collapsible-header">
+          <a class="black-text">Documentation</a>
+          <i class="material-icons">arrow_drop_down</i>
+        </div>
+        <div class="collapsible-body">
+          <ul>
+            <li>
+              <a href="/guide/">Overview</a>
+            </li>
+            <li>
+              <a href="/fai-guide/">FAI Guide</a>
+            </li>
+            <li>
+              <a href="/doc/man/" title="man pages">Manual pages</a>
+            </li>
+            <li>
+              <a href="/otherdocs/">Other documentation</a>
+            </li>
+            <li>
+              <a href="/talks/">Talk slides and videos</a>
+            </li>
+          </ul>
+        </div>
       </li>
     </ul>
     <div class="divider"></div>
@@ -87,16 +123,23 @@
   <li>
     <ul class="collapsible">
       <li>
-	<div class="collapsible-header">
-	  <a class="black-text">Developers</a><i class="material-icons">arrow_drop_down</i>
-	</div>
-	<div class="collapsible-body">
-	  <ul>
-            <li><a href="/sources/" title="Sources">Sources / Bugs</a></li>
-            <li><a href="/roadmap/" title="Roadmap">Roadmap</a></li>
-            <li><a href="/team/" title="Team">Team</a></li>
-	  </ul>
-	</div>
+        <div class="collapsible-header">
+          <a class="black-text">Developers</a>
+          <i class="material-icons">arrow_drop_down</i>
+        </div>
+        <div class="collapsible-body">
+          <ul>
+            <li>
+              <a href="/sources/" title="Sources">Sources / Bugs</a>
+            </li>
+            <li>
+              <a href="/roadmap/" title="Roadmap">Roadmap</a>
+            </li>
+            <li>
+              <a href="/team/" title="Team">Team</a>
+            </li>
+          </ul>
+        </div>
       </li>
     </ul>
     <div class="divider"></div>
