Moved download button to About Card, set card to full width

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
 
         <div class="row">
-          <div class="col s12 m8 l8">
+          <div class="col s12">
             <!-- About FAI -->
             <div class="card white">
               <div class="card-content black-text">
@@ -61,21 +61,17 @@
                   environments. You can take one or more virgin PC's, turn on the power, and after a few minutes, the systems are installed, and completely configured to your exact needs, without any interaction necessary.
                 </p>
               </div>
-            </div>
-          </div>
-
-          <div class="col s12 m4 l4">
-            <!-- Download -->
-            <div class="card orange center hoverable">
-              <a class="waves-effect waves-light btn-large orange z-depth-0 center">
-                <i class="material-icons left">download</i>FAI ISO (1.1GB)</a>
+              <div class="card-action">
+                <a class="waves-effect waves-light btn orange">
+                  <i class="material-icons left">download</i>FAI ISO (1.1GB)</a>
+              </div>
             </div>
           </div>
         </div>
 
         <div class="row">
 
-          <div class="col s12 m8 l8">
+          <div class="col s12">
             <!-- About FAI.me -->
             <div class="card white">
               <div class="card-content black-text">
@@ -92,7 +88,7 @@
 
         <div class="row">
 
-          <div class="col s12 m8 l8">
+          <div class="col s12">
             <!-- News -->
             <div class="card white">
               <div class="card-content black-text">
