Added expand all btn to menu, removed whitespace in menu

--- a/header.html
+++ b/header.html
@@ -22,10 +22,14 @@
 
   <li>
     <ul class="collapsible">
+      <a href="#" class="right btn-floating orange">
+        <i class="material-icons">unfold_more</i>
+      </a>
       <li>
         <div class="collapsible-header">
           <a class="black-text">Home</a>
           <i class="material-icons">arrow_drop_down</i>
+
         </div>
         <div class="collapsible-body">
           <ul>
