--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
       .sidenav {
         top: 65px;
       }
+      .sidenav .divider {
+        margin-top: 0px;
+      }
 
       @media only screen and (max-width : 992px) {
 
