FAIme site created, footer created

--- a/header.html
+++ b/header.html
@@ -153,5 +153,7 @@
     <a class="black-text" style="padding-left:16px" href="/contact/" title="Contact">Contact / Support</a>
     <div class="divider"></div>
   </li>
+  <li>
+    <img class="responsive-img" src="pics/dist-logos.png" alt="">
 
 </ul>
