Small changes everywhere...

--- a/header.html
+++ b/header.html
@@ -1,7 +1,11 @@
 <div class="navbar-fixed">
   <nav class="grey darken-3">
     <div class="nav-wrapper">
-      <a href="/" class="brand-logo center">F A I</a>
+      <a href="/" class="brand-logo center">
+        <img src="pics/FAI.png" class="responsive-img hide-on-small-only" style="padding-top:2%" width="40%" alt="">
+        <span class="hide-on-med-and-up">FAI</span>
+
+      </a>
       <a href="#" data-target="sidenav" class="sidenav-trigger">
         <i class="material-icons">menu</i>
       </a>
@@ -153,7 +157,5 @@
     <a class="black-text" style="padding-left:16px" href="/contact/" title="Contact">Contact / Support</a>
     <div class="divider"></div>
   </li>
-  <li>
-    <img class="responsive-img" src="pics/dist-logos.png" alt="">
 
 </ul>
