--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       .sidenav {
         top: 65px;
         width: 250px;
+
+      }
+      #distlogos {
+        padding-top: 20px;
       }
       .sidenav .divider {
         margin-top: 0;
