--- a/reports/index.html
+++ b/reports/index.html
@@ -52,7 +52,7 @@ Does the default install kernel recognize all your hardware? No
 Which drivers are missing? firmware-bnx2
 
 Do you manage your configuration space under version control? Yes
-How big is your config space (Mbytes, # of files)? 11960
+How big is your config space (Mbytes, # of files)? 1.8M, 361 files
 How many files do you have in ../config/files? 89
 What types of scripts are you using for local customization? shell, perl, ansible
 
