--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -7,6 +7,9 @@
 		<!--Import materialize.css-->
 		<link type="text/css" rel="stylesheet" href="../css/materialize.css" media="screen"/>
 
+		<!--Import sidenav.css-->
+		<link type="text/css" rel="stylesheet" href="../css/sidenav.css" media="screen"/>
+
 		<!--Let browser know website is optimized for mobile-->
 		<meta name="viewport" content="width=device-width,initial-scale=1.0"/>
 
@@ -14,34 +17,8 @@
 		<meta charset="UTF-8"/>
 		<title>FAI - Fully Automatic Installation</title>
 		<style>
-			footer,
-			main {
-				padding-left: 100px;
-			}
-
 			.input-field {
 				margin-top: 0;
-			}
-
-			.sidenav {
-				top: 65px;
-				width: 250px;
-			}
-			.sidenav .divider {
-				margin-top: 0;
-			}
-
-			@media only screen and (max-width : 992px) {
-
-				footer,
-				header,
-				main {
-					padding-left: 0;
-				}
-
-				.sidenav {
-					top: 0;
-				}
 			}
 		</style>
 	</head>
