--- a/index.html
+++ b/index.html
@@ -7,42 +7,15 @@
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.css" media="screen"/>
 
+    <!--Import sidenav.css-->
+    <link type="text/css" rel="stylesheet" href="css/sidenav-compact.css" media="screen"/>
+
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
 
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <meta charset="UTF-8"/>
     <title>FAI - Fully Automatic Installation</title>
-    <style>
-      main, footer {
-        padding-left: 100px;
-      }
-
-      .sidenav {
-        top: 65px;
-        width: 250px;
-
-      }
-      #distlogos {
-        padding-top: 20px;
-      }
-      .sidenav .divider {
-        margin-top: 0;
-      }
-
-      @media only screen and (max-width : 992px) {
-
-        footer,
-        header,
-        main {
-          padding-left: 0;
-        }
-
-        .sidenav {
-          top: 0;
-        }
-      }
-    </style>
   </head>
 
   <body>
@@ -59,115 +32,132 @@
           </div>
         </div>
 
+        <div class="row valign-wrapper">
+          <div class="col s8">
+            <h4>About FAI</h4>
+            <p>FAI is a tool for unattended mass deployment of Linux. It's a system to install and configure Linux systems and software packages on computers as well as virtual machines, from small labs to large-scale infrastructures like clusters and virtual
+              environments. You can take one or more virgin PC's, turn on the power, and after a few minutes, the systems are installed, and completely configured to your exact needs, without any interaction necessary.
+            </p>
+          </div>
+          <div class="col s4">
+            <a class="waves-effect waves-light btn-large orange valign right">
+              <i class="material-icons left">download</i>FAI ISO (1.1GB)</a>
+          </div>
+
+        </div>
+
         <div class="row">
           <div class="col s12">
-            <!-- About FAI -->
-            <div class="card white">
-              <div class="card-content black-text">
-                <span class="card-title">About FAI</span>
-                <p>FAI is a tool for unattended mass deployment of Linux. It's a system to install and configure Linux systems and software packages on computers as well as virtual machines, from small labs to large-scale infrastructures like clusters and virtual
-                  environments. You can take one or more virgin PC's, turn on the power, and after a few minutes, the systems are installed, and completely configured to your exact needs, without any interaction necessary.
-                </p>
-              </div>
-              <div class="card-action">
-                <a class="waves-effect waves-light btn orange">
-                  <i class="material-icons left">download</i>FAI ISO (1.1GB)</a>
-              </div>
-            </div>
-          </div>
+            <h5>About
+              <a href="/FAIme">FAI.me</a>
+            </h5>
+            <p>FAI.me is a build service to create custom Debian disk images used on desktop, in virtual machines or on a cloud-computing platform.
+            </p>
 
-          <div class="col s12">
-            <!-- About FAI.me -->
-            <div class="card white">
-              <div class="card-content black-text">
-                <span class="card-title">About FAI.me</span>
-                <p>FAI.me is a tool to create custom Debian disk images used on desktop, in virtual machines or on a cloud-computing platform.
-                </p>
-              </div>
-              <div class="card-action">
-                <a href="/FAIme">FAI.me</a>
-              </div>
-            </div>
           </div>
+        </div>
 
+        <div class="row">
           <div class="col s12">
-            <!-- News -->
-            <div class="card white">
-              <div class="card-content black-text">
-                <span class="card-title">News</span>
-                <ul>
-                  <li class="divider"></li>
-                  <li>
-                    [Apr 28, 2020] FAI 5.9.4 is released, new images available including
+            <h5>News</h5>
+
+            <table class="">
+              <tbody>
+                <tr>
+                  <td>Apr 28, 2020</td>
+                  <td>FAI 5.9.4 is released, new images available including
                     <b>UEFI</b>
-                    support
-                  </li>
-                  <li class="divider"></li>
-                  <li>
-                    [Oct 11-16 2019] Thomas was in Boston, MA joining the Debian Cloud sprint
-                  </li>
-                  <li class="divider"></li>
-                  <li>
-                    [Nov 27, 2017]
+                    support</td>
+
+                </tr>
+                <tr>
+                  <td>Oct 11-16, 2019</td>
+                  <td>Thomas was in Boston, MA joining the Debian Cloud sprint</td>
+
+                </tr>
+                <tr>
+                  <td>Nov 27, 2017</td>
+                  <td>
                     <b>I
                       <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2017-November/011869.html">announced</a>
                       the
                       <a href="/FAIme">FAI.me</a>
                       service</b>
-                  </li>
-                  <li class="divider"></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col s12">
-            <!-- Features -->
-            <div class="card white">
-              <div class="card-content black-text">
-                <span class="card-title">Features</span>
-                <ul>
-                  <li class="divider"></li>
-                  <li>
-                    Installs Debian, Ubuntu, CentOS, RHEL, SUSE, ...</li>
-                  <li class="divider"></li>
-                  <li>
-                    Centralized deployment and configuration management</li>
-                  <li class="divider"></li>
-                  <li>
-                    Automated installation of virtual machines using KVM, XEN or VirtualBox and Vserver</li>
-                  <li class="divider"></li>
-                  <li>
-                    Creation of custom disk image for OpenStack, KVM, VirtualBox, VMware, Azure, EC2, GCE</li>
-                  <li class="divider"></li>
-                  <li>
-                    Easy set up of software RAID and LVM</li>
-                  <li class="divider"></li>
-                  <li>
-                    Full remote control via ssh during installation</li>
-                  <li class="divider"></li>
-                  <li>
-                    Integrated disaster recovery system</li>
-                  <li class="divider"></li>
-                  <li>
-                    Every stage can be customized via hooks</li>
-                </ul>
-              </div>
-              <div class="card-action">
-                <a href="/features/" title="Features">Read more</a>
-              </div>
-            </div>
-          </div>
+                  </td>
 
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
-      </div>
-    </main>
 
-    <footer class="page-footer grey darken-3">
-      <!--#include virtual="footer.html" -->
-    </footer>
-    <!--JavaScript at end of body for optimized loading-->
-    <script src="js/materialize.js"></script>
-    <script>
-      M.AutoInit();
-    </script>
-  </body>
+        <div class="row valign-wrapper">
+          <div class="col s12 m8">
+
+            <h5>
+              Features
+            </h5>
+            <ul>
+              <li>
+                <span class="valign-wrapper">
+                  <i class="material-icons">done</i>&nbsp;<span>Installs Debian, Ubuntu, CentOS, RHEL, SUSE, ...</span></span>
+              </li>
+              <li>
+                <span class="valign-wrapper">
+                  <i class="material-icons">done</i>&nbsp;<span>Centralized deployment and configuration management</span></span>
+              </li>
+              <li>
+                <span class="valign-wrapper">
+                  <i class="material-icons">done</i>&nbsp;<span>Automated installation of virtual machines using KVM, XEN or VirtualBox and Vserver</span></span>
+              </li>
+              <li>
+                <span class="valign-wrapper">
+                  <i class="material-icons">done</i>&nbsp;<span>Creation of custom disk image for OpenStack, KVM, VirtualBox, VMware, Azure, EC2, GCE</span></span>
+              </li>
+              <li>
+                <span class="valign-wrapper">
+                  <i class="material-icons">done</i>&nbsp;<span>Easy set up of software RAID and LVM</span></span>
+              </li>
+              <li>
+                <span class="valign-wrapper">
+                  <i class="material-icons">done</i>&nbsp;<span>Full remote control via ssh during installation</span></span>
+              </li>
+              <li>
+                <span class="valign-wrapper">
+                  <i class="material-icons">done</i>&nbsp;<span>Integrated disaster recovery system</span></span>
+              </li>
+              <li>
+                <span class="valign-wrapper">
+                  <i class="material-icons">done</i>&nbsp;<span>Every stage can be customized via hooks</span></span>
+              </li>
+              <li>
+                <span class="valign-wrapper">
+                  <i class="material-icons">done_all</i>&nbsp;<span>
+                    <a href="/features/" title="Features">And many more...</a>
+                  </span>
+                </span>
+              </li>
+
+            </ul>
+          </div>
+
+          <div class="col m4 hide-on-small-only">
+
+            <img class="valign responsive-img" src="pics/dist-logos.png" alt="">
+
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </main>
+
+  <footer class="page-footer grey darken-3">
+    <!--#include virtual="footer.html" -->
+  </footer>
+  <!--JavaScript at end of body for optimized loading-->
+  <script src="js/materialize.js"></script>
+  <script>
+    M.AutoInit();
+  </script>
+</body>
