sidebar items are unfold by default

--- a/header.html
+++ b/header.html
@@ -29,7 +29,7 @@
       <a href="#" class="right btn-floating orange">
         <i class="material-icons">unfold_more</i>
       </a>
-      <li>
+      <li class="active">
         <div class="collapsible-header">
           <a class="black-text">Home</a>
           <i class="material-icons">arrow_drop_down</i>
@@ -74,7 +74,7 @@
 
   <li>
     <ul class="collapsible">
-      <li>
+      <li class="active">
         <div class="collapsible-header">
           <a class="black-text">Download</a>
           <i class="material-icons">arrow_drop_down</i>
@@ -99,7 +99,7 @@
 
   <li>
     <ul class="collapsible">
-      <li>
+      <li class="active">
         <div class="collapsible-header">
           <a class="black-text">Documentation</a>
           <i class="material-icons">arrow_drop_down</i>
@@ -130,7 +130,7 @@
 
   <li>
     <ul class="collapsible">
-      <li>
+      <li class="active">
         <div class="collapsible-header">
           <a class="black-text">Developers</a>
           <i class="material-icons">arrow_drop_down</i>
